--- a/src/routes/vita/stats/categorycomponents/summary.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/summary.styles.scss
@@ -26,6 +26,7 @@
   }
   .arrow {
     height: 3vh;
+    cursor: pointer;
   }
 
   .Skin-Selector {
@@ -34,6 +35,7 @@
     justify-content: center;
     align-items: center;
     width: 35vw;
+    user-select: none;
     .Skin-Navigator {
       display: flex;
       flex-direction: row;
