--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -15,11 +15,6 @@
   margin-bottom: 2.5vh;
   transition: all $theme-transition;
 
-  // @include themed() {
-  //   background-color: t($container-color);
-  //   box-shadow: 6px 6px 3px t($shadow-color);
-  // }
-
   .nav-container {
     display: flex;
     flex-direction: row;
@@ -30,6 +25,11 @@
   }
 
   .home-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2px;
     @include themed() {
       color: t($text-color);
     }
@@ -56,7 +56,7 @@
   }
 
   .home-box:active {
-    transform: scale(1.15);
+    transform: scale(0.95);
   }
 
   $box-leftmargin: 8px;
