--- a/src/routes/components/pageHeader/pageheader.styles.scss
+++ b/src/routes/components/pageHeader/pageheader.styles.scss
@@ -14,14 +14,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 100%;
     height: 9vh;
-    border-radius: 9px;
-    margin-bottom: 2vh;
+    border-radius: 3px;
+    margin-bottom: 4.5vh;
+    margin-top: 2vh;
     transition: all $theme-transition;
     text-align: center;
     @include themed() {
-      border: 3px solid darken(t($primary), 25%);
+      border-top: 2px solid darken(t($primary), 25%);
+      border-bottom: 2px solid darken(t($primary), 25%);
     }
 
     .text {
