Added new buttons? to feedback page

--- a/src/routes/components/pageHeader/pageheader.styles.scss
+++ b/src/routes/components/pageHeader/pageheader.styles.scss
@@ -23,6 +23,7 @@
     @include themed() {
       border-top: 2px solid darken(t($primary), 8%);
       border-bottom: 2px solid darken(t($primary), 8%);
+      box-shadow: inset 0px 2px 10px t($shadow-color);
     }
 
     .text {
