--- a/src/routes/feedback/feedback.styles.scss
+++ b/src/routes/feedback/feedback.styles.scss
@@ -17,7 +17,7 @@ $borderRadius: 4px;
   .feedback-entries-container {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 5px;
     margin-bottom: 20px;
     justify-content: center;
     align-items: center;
@@ -46,7 +46,7 @@ $borderRadius: 4px;
 
   .button-container {
     height: 1vmin;
-    margin-bottom: 3vh;
+    margin-bottom: 5vh;
   }
 
   .sign-in-button {
@@ -126,21 +126,31 @@ $borderRadius: 4px;
     }
   }
 
+  .Load-More-Container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 55%;
+    margin-top: 15px;
+    transition: all $theme-transition;
+    @include themed() {
+      color: t($text-color);
+    }
+  }
+
   .Load-More-Button {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    transform: translate(-2.5%, 0%);
-    margin-top: 15px;
-    margin-bottom: 8px;
+    transform: translate(-2.5%, -2.5%);
     height: 100%;
-    width: 15%;
+    width: 35%;
     height: 7vh;
     @include themed() {
       background-color: t($container-color);
     }
-    transition: all $buttonTransitionTime;
+    transition: all $theme-transition;
     border: none;
 
     &::before {
@@ -154,7 +164,6 @@ $borderRadius: 4px;
       @include themed() {
         box-shadow: 0px 5px 5px t($shadow-color);
       }
-      transition: all $buttonTransitionTime;
     }
 
     &::after {
@@ -167,27 +176,6 @@ $borderRadius: 4px;
       bottom: -4px;
       @include themed() {
         box-shadow: 5px 0px 5px t($shadow-color);
-      }
-      transition: all $buttonTransitionTime;
-    }
-
-    &:active {
-      margin-left: 10px;
-      margin-top: 2vh;
-      transform: translate(0%, -3%);
-      transition: all $buttonTransitionTime;
-      &::before {
-        bottom: -5px;
-        height: 5px;
-        left: 3px;
-        transition: all $buttonTransitionTime;
-      }
-
-      &::after {
-        right: -5px;
-        width: 5px;
-        bottom: -3px;
-        transition: all $buttonTransitionTime;
       }
     }
   }
