--- a/src/routes/contactme/contactbox/ContactBox.styles.scss
+++ b/src/routes/contactme/contactbox/ContactBox.styles.scss
@@ -58,14 +58,12 @@ $contact-sidesgap: 2.5rem;
 
 .Contact-Container:hover {
   transition: all 0.5s;
-  margin-left: -120px;
-  height: 15vh;
+  transform: translate(-9%, -9%);
 
   &::before {
     //bottom
-    height: 23px;
-    left: 12px;
-    bottom: -21px;
+    left: 10px;
+    bottom: -17px;
     width: 100%;
     @include themed() {
       box-shadow: -10px 18px 15px t($shadow-color);
@@ -74,10 +72,10 @@ $contact-sidesgap: 2.5rem;
 
   &::after {
     //right
-    right: -24px;
-    width: 24px;
-    bottom: -10px;
-    height: 99%;
+    right: -18px;
+    bottom: -8px;
+    height: 100%;
+    width: 18px;
     @include themed() {
       box-shadow: 17px 10px 15px t($shadow-color);
     }
