--- a/src/routes/feedback/feedback.styles.scss
+++ b/src/routes/feedback/feedback.styles.scss
@@ -22,6 +22,7 @@ $borderRadius: 4px;
     justify-content: center;
     align-items: center;
     width: 100%;
+    user-select: none;
   }
   .give-feedback-container {
     width: 35vw;
@@ -46,7 +47,7 @@ $borderRadius: 4px;
 
   .button-container {
     height: 1vmin;
-    margin-bottom: 5vh;
+    margin-bottom: 4vh;
   }
 
   .sign-in-button {
@@ -58,9 +59,10 @@ $borderRadius: 4px;
     transform: translate(-5%, -13%);
     font-family: $theme-font;
     text-decoration: none;
-    font-size: 1.25em;
+    font-size: 1.5em;
     transition: all $buttonTransitionTime, background-color $theme-transition;
     border-width: 0px;
+    user-select: none;
 
     @include themed() {
       background-color: t($primary);
@@ -95,9 +97,7 @@ $borderRadius: 4px;
     }
 
     &:active {
-      margin-left: 10px;
-      margin-top: 2vh;
-      transform: translate(-5%, -10%);
+      transform: translate(-3%, -4%);
       &::before {
         bottom: -5px;
         height: 5px;
@@ -130,22 +130,24 @@ $borderRadius: 4px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    width: 55%;
+    width: 50%;
     margin-top: 15px;
     transition: all $theme-transition;
     @include themed() {
       color: t($text-color);
     }
+    user-select: none;
   }
 
   .Load-More-Button {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     transform: translate(-2.5%, -2.5%);
     height: 100%;
-    width: 35%;
+    font-size: 1.4em;
+    width: 20%;
     height: 7vh;
     @include themed() {
       background-color: t($container-color);
@@ -178,5 +180,13 @@ $borderRadius: 4px;
         box-shadow: 5px 0px 5px t($shadow-color);
       }
     }
+  }
+  .Feedback-Arrow-Container {
+    height: 100%;
+    width: 100%;
+  }
+  .arrow {
+    height: 3.5vh;
+    cursor: pointer;
   }
 }
