--- a/src/routes/vita/stats/categorycomponents/summary.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/summary.styles.scss
@@ -11,17 +11,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    font-size: 1.5em;
+    font-size: 2em;
     @include themed() {
       color: t($text-color);
     }
     transition: $theme-transition all;
-    // @include themed() {
-    //   border-bottom: 3px dashed t($text-color);
-    //   border-top: 3px dashed t($text-color);
-    // }
+
     padding-bottom: 2vh;
-    padding-top: 2vh;
+    padding-top: 1vh;
+    min-height: 45vh;
   }
 
   .Dialogue {
