--- a/src/routes/vita/stats/categorycomponents/summary.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/summary.styles.scss
@@ -24,6 +24,7 @@
 
   .Dialogue {
     width: 35%;
+    font-size: 1.5rem;
   }
 
   .Left-Dialogue {
@@ -147,6 +148,7 @@
     }
     .AFK_dialogue {
       width: 35%;
+      font-size: 1.3rem;
     }
   }
 }
