--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -67,6 +67,7 @@
     @include themed() {
       box-shadow: 15px 20px 25px t($shadow-color);
     }
+    cursor: pointer;
 
     &::before {
       //bottom side
@@ -190,6 +191,7 @@
     .category-text {
       margin-left: 5px;
       margin-right: 5px;
+      cursor: pointer;
       @include themed() {
         color: t($text-color);
       }
