--- a/src/routes/vita/stats/categorycomponents/summary.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/summary.styles.scss
@@ -67,7 +67,7 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      transform: translate(-1.5%, 0%);
+      transform: translate(-0.5%, -0.5%);
       margin-top: 15px;
       margin-bottom: 8px;
       height: $portrait-height;
@@ -149,6 +149,26 @@
     .AFK_dialogue {
       width: 35%;
       font-size: 1.3rem;
+    }
+  }
+
+  .list-body {
+    @include themed() {
+      color: t($text-color);
+    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 6vw;
+  }
+  .game-list {
+    @include themed() {
+      color: t($text-color);
+    }
+    padding-left: 5px;
+    .game-image {
+      width: 100%;
     }
   }
 }
