--- a/src/routes/vita/stats/categorycomponents/summary.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/summary.styles.scss
@@ -3,6 +3,7 @@
   @extend .fade-in;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 90%;
   margin-top: 7vh;
   min-height: 25vh;
