--- a/src/routes/vita/stats/categorycomponents/experience.styles.scss
+++ b/src/routes/vita/stats/categorycomponents/experience.styles.scss
@@ -8,8 +8,10 @@ $buttonTransitionTime: 0.15s;
   @extend .fade-in;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 68%;
-  margin-top: 4vh;
+  // margin-top: 4vh;
   min-height: 15vh;
 
   .Time {
