--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -20,7 +20,7 @@
   .categories-container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 5px;
     width: 50vw;
     height: 12vh;
