--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -46,8 +46,8 @@ $borderRadius: 4px;
 
   font-family: $theme-font;
   text-decoration: none;
-  font-size: 1.4vw;
-  text-align: left;
+  font-size: 1.5rem;
+  text-align: center;
   transition: all $theme-transition;
 }
 
@@ -57,8 +57,9 @@ $borderRadius: 4px;
   }
   font-family: $theme-font;
   text-decoration: none;
-  font-size: 1.4vw;
+  font-size: 1.8rem;
   text-align: left;
   margin-bottom: 5px;
   transition: all $theme-transition;
+  text-align: center;
 }
