--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -37,10 +37,11 @@ $borderRadius: 4px;
   margin-top: 35px;
   height: 50vh;
   width: 60%;
+  gap: 15px;
 
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 10px 10px;
   transform: translate(-2%, -2%);
