--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -9,17 +9,11 @@ $borderRadius: 4px;
 }
 
 .image-container {
-  margin-top: 18px;
-  margin-left: 40px;
   border-radius: 2px;
   height: 100%;
   width: 30%;
+  background-color: red;
 
-  display: flex;
-  flex-direction: row;
-  padding: 20px 0px;
-  transform: translate(-10%, -10%);
-  font-size: 1vw;
   transition: all $theme-transition;
 }
 
@@ -29,9 +23,8 @@ $borderRadius: 4px;
     border-bottom: 1px solid t($sub-primary);
   }
   border-radius: 2px;
-  height: 60%;
+  height: 90%;
   width: 60%;
-  margin-right: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,7 +39,7 @@ $borderRadius: 4px;
 
   font-family: $theme-font;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   text-align: center;
   transition: all $theme-transition;
 }
@@ -57,7 +50,7 @@ $borderRadius: 4px;
   }
   font-family: $theme-font;
   text-decoration: none;
-  font-size: 1.8rem;
+  font-size: 1.25rem;
   text-align: left;
   margin-bottom: 5px;
   transition: all $theme-transition;
