--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -14,6 +14,10 @@ $borderRadius: 4px;
   align-items: center;
   width: 100%;
   height: 67.5vh;
+
+  @media screen and (max-width: 540px) {
+    height: 100%;
+  }
 }
 
 .home-fade-in {
@@ -83,5 +87,10 @@ $borderRadius: 4px;
       background-color: darken(t($primary), 25%);
       box-shadow: 10px 0px 10px t($shadow-color);
     }
+  }
+
+  @media screen and (max-width: 900px) {
+    height: 100%;
+    flex-direction: column;
   }
 }
