Improved feedback and contact me resposnivity

--- a/src/routes/contactme/contactbox/ContactBox.styles.scss
+++ b/src/routes/contactme/contactbox/ContactBox.styles.scss
@@ -1,6 +1,7 @@
 @import "../../../globals/_theme.scss";
 $buttonTransitionTime: 0.07s;
 $borderRadius: 4px;
+$smallScreenWidth: 832px;
 
 %test {
   position: absolute;
@@ -54,6 +55,11 @@ $contact-sidesgap: 2.5rem;
       background-color: darken(t($primary), 25%);
     }
   }
+
+  @media screen and (max-width: $smallScreenWidth) {
+    width: 100%;
+    min-width: 0;
+  }
 }
 
 .Contact-Container:hover {
@@ -80,6 +86,26 @@ $contact-sidesgap: 2.5rem;
       box-shadow: 17px 10px 15px t($shadow-color);
     }
   }
+
+  @media screen and (max-width: $smallScreenWidth) {
+    transform: translate(0%, 0%);
+
+    &::before {
+      //bottom
+      bottom: -18px;
+      height: 17px;
+      width: 100%;
+      left: 9px;
+    }
+
+    &::after {
+      //right
+      right: -17px;
+      height: 100%;
+      width: 16px;
+      bottom: -10px;
+    }
+  }
 }
 
 .contact-thumb {
@@ -99,7 +125,7 @@ $contact-sidesgap: 2.5rem;
   }
 
   .icon-text {
-    font-size: 1.3vw;
+    font-size: 1rem;
     @include themed() {
       color: lighten(t($primary), 5%);
     }
@@ -108,7 +134,7 @@ $contact-sidesgap: 2.5rem;
 
 .contact-thumb:hover {
   .icon-text {
-    font-size: 3vmin;
+    font-size: 1.2rem;
   }
 }
 
@@ -135,6 +161,6 @@ $contact-sidesgap: 2.5rem;
   flex-direction: column;
   align-items: center;
   width: 75%;
-  font-size: 1vw;
+  font-size: 1rem;
   text-align: center;
 }
