--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -14,7 +14,7 @@ $mobile-width: 900px;
   border-radius: 2px;
   height: 100%;
   width: 30%;
-  background-color: red;
+  background-color: transparent;
 
   transition: all $theme-transition;
 }
