All-around responsivity

--- a/src/globals/_theme.scss
+++ b/src/globals/_theme.scss
@@ -27,14 +27,14 @@ $themes: (
       rgba(106, 106, 106, 0.6),
   ),
   dark: (
-    primary: #123f5a,
+    primary: #00385a,
     sub-primary: #d4eeff,
     background-center: #063b5f,
     background-sides: #02141e,
     background: rgb(6, 22, 40),
     text-color: #dcdff1,
     border-color: #f5f4ec,
-    container-color: #01131d,
+    container-color: #02243a,
     shadow-color: rgba(0, 0, 0, 0.6),
   ),
 );
