--- a/src/routes/home/explore_button/venturebutton.styles.scss
+++ b/src/routes/home/explore_button/venturebutton.styles.scss
@@ -13,7 +13,7 @@ $borderRadius: 4px;
   transform: translate(-10%, -10%);
   font-family: $theme-font;
   text-decoration: none;
-  font-size: 4vh;
+  font-size: 2rem;
   transition: all $buttonTransitionTime, background-color $theme-transition;
   border-width: 0px;
   margin-bottom: 1vh;
