--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   min-height: 100vh;
   @include themed() {
     background-color: t($background);
