--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -8,10 +8,16 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin-bottom: 2vh;
+  margin: 3vh 0 3vh 0;
   border-radius: 10px;
-  margin-top: 2vh;
   transition: background-color $theme-transition, box-shadow $theme-transition;
+
+  @media screen and (max-width: 972px) {
+    width: 95%;
+  }
+  @media screen and (min-height: 670px) {
+    margin: 15px 0 15px 0;
+  }
 
   // @include themed() {
   //   background-color: t($container-color);
