--- a/src/routes/components/pageHeader/pageheader.styles.scss
+++ b/src/routes/components/pageHeader/pageheader.styles.scss
@@ -17,7 +17,6 @@
     width: 100%;
     height: 9vh;
     margin-bottom: 4.5vh;
-    margin-top: 1vh;
     transition: all $theme-transition;
     text-align: center;
     @include themed() {
@@ -28,7 +27,7 @@
     overflow: hidden;
 
     .text {
-      font-size: 25px;
+      font-size: 1.5rem;
       font-family: $theme-font;
       @include themed() {
         color: t($text-color);
