--- a/src/routes/portfolio/project-card/project.styles.scss
+++ b/src/routes/portfolio/project-card/project.styles.scss
@@ -1,4 +1,5 @@
 @import "../../../globals/_theme";
+@import "../../feedback/feedback.styles.scss";
 $buttonTransitionTime: 0.1s;
 %test {
   position: absolute;
@@ -18,6 +19,10 @@ $buttonTransitionTime: 0.1s;
   border-width: 0px;
   height: 35vh;
   width: 40vw;
+
+  @media screen and (max-width: (calc($smallScreenWidth + 80px))) {
+    width: 95%;
+  }
 
   @include themed() {
     background-color: t($primary);
