--- a/src/routes/vita/vita.styles.scss
+++ b/src/routes/vita/vita.styles.scss
@@ -1,10 +1,13 @@
 @import "../../globals/theme";
+@import "../feedback//feedback.styles.scss";
+
 .Vita-Page {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
+  min-height: 76vh;
   transition: all $theme-transition;
 
   .stats-container {
@@ -29,6 +32,11 @@
     top: 0 !important;
     position: sticky !important;
     z-index: 1;
+
+    @media screen and (max-width: $smallScreenWidth) {
+      width: 95%;
+      min-width: 0;
+    }
   }
 
   $buttonTransitionTime: 0.15s;
@@ -68,6 +76,11 @@
       box-shadow: 15px 20px 25px t($shadow-color);
     }
     cursor: pointer;
+
+    @media screen and (max-width: $smallScreenWidth) {
+      width: 100%;
+      min-width: 0;
+    }
 
     &::before {
       //bottom side
@@ -144,8 +157,13 @@
     .category-text {
       margin-left: 5px;
       margin-right: 5px;
+      font-size: 1.5rem;
       @include themed() {
         color: t($text-color);
+      }
+
+      @media screen and (max-width: $smallScreenWidth) {
+        font-size: 90%;
       }
     }
   }
